objects/QBOSubscribeObj__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ActiveStatus__c</fullName>
        <label>ActiveStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <label>Countries</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamilies__c</fullName>
        <label>ProductFamilies</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>QBOSubscribe</label>
</CustomObject>